--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -4,7 +4,7 @@
     min-width: 300px;
     position: relative;
     margin: auto;
-    margin-top: 40px;
+    padding-bottom: 40px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
