--- a/scss/layout/_templates.scss
+++ b/scss/layout/_templates.scss
@@ -32,46 +32,21 @@
 	    to {background-position:10000px 0;}
 	}
 
-	.stars, 
-	.twinkling, 
-	.clouds {
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  right: 0;
-	  bottom: 0;
-	  width: 100%;
-	  height: 360%;
-	  display: block;
-	  
-	  @include respond-to(tablet) {
-	  	height: 135%;
-	  }
-	  @include respond-to(desktop) {
-	  	height: 112%;
-	  }
-	}
-
 	.stars {
-	  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
-	}
+	  background:	  url(../img/stars.png) repeat top center ,
+	  				  url(../img/twinkling.png) no-repeat top center ,
+	  				  url(../img/clouds3.png) repeat top center;
 
-	.twinkling{
-	  background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+		  -moz-animation:move-twink-back 800s linear infinite;
+		  -ms-animation:move-twink-back 800s linear infinite;
+		  -o-animation:move-twink-back 800s linear infinite;
+		  -webkit-animation:move-twink-back 800s linear infinite;
+		  animation:move-twink-back 800s linear infinite;
 
-	  -moz-animation:move-twink-back 200s linear infinite;
-	  -ms-animation:move-twink-back 200s linear infinite;
-	  -o-animation:move-twink-back 200s linear infinite;
-	  -webkit-animation:move-twink-back 200s linear infinite;
-	  animation:move-twink-back 200s linear infinite;
-	}
-
-	.clouds{
-    background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
-
-	  -moz-animation:move-clouds-back 200s linear infinite;
-	  -ms-animation:move-clouds-back 200s linear infinite;
-	  -o-animation:move-clouds-back 200s linear infinite;
-	  -webkit-animation:move-clouds-back 200s linear infinite;
-	  animation:move-clouds-back 200s linear infinite;
+		  -moz-animation:move-clouds-back 200s linear infinite;
+		  -ms-animation:move-clouds-back 200s linear infinite;
+		  -o-animation:move-clouds-back 200s linear infinite;
+		  -webkit-animation:move-clouds-back 200s linear infinite;
+		  animation:move-clouds-back 200s linear infinite;
+	background-color: #000;
 	}
